src/css/ha-sidebar.css
/* Kiosk mode hide sidebar */
:host {
	width: var(--kiosk-sidebar-width, 100%);
}

/* Hide title but keep it tappable */
.title {
	color: transparent;
}
:host([narrow]) .menu:not(:has(mwc-button, ha-icon-button)) {
	height: calc(12px + env(safe-area-inset-top));
}

/* Modal sidebar panels list height */
:host([narrow]) .panels-list {
	height: calc(100vh - 12px - var(--safe-area-inset-top, 0px));
}

/* Fix menu button size */
.menu {
	width: min-content;
	margin-inline-start: 28px;
	padding: 0;
	border-width: 0;

	--inherited-text-color: var(--md-sys-color-on-surface-variant);
	--ha-button-mdc-icon-size: 24px;
}

/* Remove scrollbar */
.ha-scrollbar {
	scrollbar-width: none;
}
::-webkit-scrollbar {
	width: 0;
}

/* Modify sidebar item size and animate background when expanding/retracting */
ha-list-item-button {
	height: 64px;
	width: var(--ha-sidebar-width);
	transition: all var(--md-sys-motion-expressive-spatial-default);
	margin: 0;
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* Expanded rail indicator should fit content width */
:host([expanded]) ha-list-item-button {
	height: 56px;
	width: calc(var(--ha-sidebar-width) - 40px - env(safe-area-inset-left));
	max-width: fit-content;
	margin: 0 20px;
	border-radius: var(--md-sys-shape-corner-full);
}

/* Modal sidebar item width */
:host([narrow]) ha-list-item-button {
	width: fit-content;
	max-width: 256px;
}

/* Fix collapsed rail selected text color */
ha-list-item-button.selected {
	--md-list-item-label-text-color: var(--sidebar-selected-text-color);
}

/* Prevent text jumpiness on opening sidebar */
.item-text {
	display: block;
	overflow: visible;
	white-space: nowrap;
	line-height: var(--md-sys-typescale-label-large-line-height);
	letter-spacing: var(--md-sys-typescale-label-large-tracking);
}

/* Make expanded sidebar clickable area full height and width */
:host([expanded]) ha-list-item-button::part(base) {
	height: 100%;
	width: min-content;
	max-width: 360px;
	border-radius: var(--md-sys-shape-corner-full);
	padding-inline: 16px;
}
:host([expanded]) ha-list-item-button::part(content) {
	max-width: min-content;
}
:host([expanded]) ha-list-item-button::part(base)::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: calc(var(--ha-sidebar-width) - env(safe-area-inset-left) - 20px);
}

/* Make collapsed navigation rail items vertical */
:host(:not([expanded])) ha-list-item-button::part(base) {
	border-radius: 0;
	padding-top: 4px;
	padding-bottom: 6px;
	flex-direction: column;
	gap: 8px;
}

/* Hide collapsed rail default ripple */
:host(:not([expanded])) ha-list-item-button::part(ripple) {
	display: none;
}

/* Hide expanded rail ripple overflow */
:host([expanded]) ha-list-item-button::part(ripple) {
	border-radius: var(--md-sys-shape-corner-full);
}

/* Display label when not expanded */
:host(:not([expanded])) ha-list-item-button .item-text {
	display: var(--navigation-rail-label-display, block);
	width: var(--ha-sidebar-width);
	max-width: var(--ha-sidebar-width);
	opacity: 1;
	text-align: center;
	white-space: initial;
	box-sizing: border-box;
	padding: 0 2px;
	margin-top: 2px;
	height: var(--md-sys-typescale-label-medium-line-height);
	font-weight: var(--md-ref-typeface-weight-medium);
	font-size: var(--md-sys-typescale-label-medium-size);
	line-height: var(--md-sys-typescale-label-medium-line-height);
	letter-spacing: var(--md-sys-typescale-label-small-tracking);
}

:host(:not([expanded])) ha-list-item-button ha-svg-icon,
:host(:not([expanded])) ha-list-item-button ha-icon {
	position: relative;
	top: 4px;
}

/* Change background of current destination icon and add scale transition */
:host([expanded]) ha-list-item-button::before,
:host(:not([expanded])) .user::before {
	content: '';
	border-radius: var(--md-sys-shape-corner-full);
	background-color: var(--sidebar-selected-background);
	opacity: 1;
	transition: transform var(--md-sys-motion-expressive-spatial-fast);
	transform: scaleX(0);
}
:host([expanded]) ha-list-item-button.selected::before,
:host(:not([expanded])) .user.selected::before {
	transform: scaleX(1);
}
:host(:not([expanded])) .user.selected::before {
	width: 56px;
	margin-inline-start: 21px;
}
:host(:not([expanded])) ha-list-item-button:not(.user)::before {
	display: none;
}
:host(:not([expanded])) ha-svg-icon::before,
:host(:not([expanded])) ha-icon::before,
:host(:not([expanded])) ha-svg-icon::after,
:host(:not([expanded])) ha-icon::after,
:host(:not([expanded])) ha-user-badge::after {
	content: '';
	position: absolute;
	display: block;
	top: var(--navigation-rail-indicator-top, -4px);
	left: var(--navigation-rail-indicator-top, -16px);
	height: var(--navigation-rail-indicator-height, 32px);
	width: var(--navigation-rail-indicator-width, 56px);
	border-radius: var(--md-sys-shape-corner-full);
	z-index: -1;
}
:host(:not([expanded])) .notifications ha-svg-icon::after {
	height: 54px;
	width: 54px;
	top: -14px;
	left: -15px;
}
:host(:not([expanded])) ha-user-badge::after {
	height: 56px;
	top: 0px;
	left: 22px;
	z-index: 0;
}
:host(:not([expanded])) ha-svg-icon::before,
:host(:not([expanded])) ha-icon::before {
	background-color: var(--sidebar-selected-background);
	opacity: 1;
	transform: scaleX(0);
	transition: transform var(--md-sys-motion-expressive-spatial-fast);
}
:host(:not([expanded])) ha-list-item-button.selected ha-svg-icon::before,
:host(:not([expanded])) ha-list-item-button.selected ha-icon::before {
	transform: scaleX(1);
}

/* Collapsed navigation rail icon state layers */
:host(:not([expanded])) ha-svg-icon::after,
:host(:not([expanded])) ha-icon::after,
:host(:not([expanded])) ha-user-badge::after {
	background-color: var(--md-sys-color-on-secondary-container);
	opacity: var(--state-layer-opacity, 0);
	transition: opacity var(--md-sys-motion-expressive-effects-default);
}
@media (hover: hover) {
	:host(:not([expanded])) ha-list-item-button:hover ha-svg-icon::after,
	:host(:not([expanded])) ha-list-item-button:hover ha-icon::after,
	:host(:not([expanded])) ha-list-item-button:hover ha-user-badge::after {
		opacity: 0.08;
	}
}
:host(:not([expanded])) ha-list-item-button:active ha-svg-icon::after,
:host(:not([expanded])) ha-list-item-button:active ha-icon::after,
:host(:not([expanded])) ha-list-item-button:active ha-user-badge::after {
	opacity: 0.18;
}

/* Fix navigation rail item icon z-index */
ha-list-item-button ha-svg-icon,
ha-list-item-button ha-icon {
	z-index: 0;
}

/* Fix hide/show panel button */
.hide-panel,
.show-panel {
	z-index: 1;
}

/* Rail notification badge */
.badge {
	color: var(--on-error-color);
	background-color: var(--error-color);
	font-size: var(--md-sys-typescale-label-small-size);
	font-weight: var(--md-sys-typescale-label-small-weight);
	line-height: var(--md-sys-typescale-label-small-line-height);
	letter-spacing: var(--md-sys-typescale-label-small-tracking);
	height: 8px;
	min-width: 8px;
	padding: 4px;
}
.badge[slot='start'] {
	top: 8px;
	left: 50%;
	z-index: 2;
}
.configuration .badge[slot='start'] {
	top: 0;
}
.badge[slot='end'] {
	position: absolute;
	top: 12px;
	left: 28px;
}

/* Disable tooltip */
.tooltip {
	display: none;
	pointer-events: none;
}

/* Fix user badge position */
:host(:not([expanded])) ha-user-badge {
	margin-inline-start: -3px;
	margin-block-start: 4px;
}
:host([expanded]) ha-user-badge {
	margin-inline-start: -8px;
}

/* Fix notifications and user badge size */
:host(:not([expanded])) .notifications,
:host(:not([expanded])) .user {
	height: 56px;
}

/* Do not use label for bottom section*/
:host(:not([expanded])) .notifications .item-text,
:host(:not([expanded])) .user .item-text {
	display: none;
}

/* Focus styles */
ha-list-item-button:focus-visible::part(base) {
	outline-color: transparent;
	animation: none;
	background-color: transparent;
}
:host([expanded]) ha-list-item-button:focus-visible::part(base) {
	background-color: rgba(
		from var(--md-sys-color-on-secondary-container) r g b / 0.1
	);
}
:host(:not([expanded])) ha-list-item-button:focus-visible {
	--state-layer-opacity: 0.1;
}

